Do not trigger krunner when the Space key is pressed

BUG: 304805
FIXED-IN: 4.9.1
REVIEW: 105889